style.css
:root {
    --comicWidth: 1000px;
    --comicHeight: 1750px;
    --eternalsmileWhite: #edefec;
    --eternalsmileBlack: #272826;
    --eternalsmileBlackground: #1a1b19;
    --eternalsmileGrey:#edefec15;
    --eternalsmileLightGrey:#edefec7d;
    --subGreen: #78BC4135;
}
body {margin:0;margin-top:10px;}
body, html {overflow-x: hidden;}
@media (max-width: 1229px) {
    /* Tablet small mode is on */
    #topBookmarks, #dSub{display: none;}
    .page, #mainnav>*, .rounder {border-radius: 10px;}

    #back1 {filter: blur(5px) brightness(0.5);}
    #back2 {filter: blur(7px) brightness(0.4);}
    #back3 {filter: blur(9px) brightness(0.3);}
    #behindContent a {pointer-events: none;}

    #nextpage {
        left: 105%;
    }
    
    .wrap {
        width: 95%;
        position: relative;
    }
	.row {flex-direction:column;}    
	.row.center {align-items: center;}
}
@media (min-width: 1230px) {
    /* Desktop big mode is on */
	.row.center {align-items: unset;}
	.wrap>main {
		padding-bottom:200px;
	}
    #underpage, #mobileSub, .mobile{
        display: none;
    }
    .wrap {
        min-width: 1100px;
        width: 70%;
    }

    #back1:hover {
        transform: translate(calc(-5.7% - 14px), 3.25714%);
        filter: blur(0) brightness(0.95);
    }
    #back2:hover {
        transform: translate(calc(-5.7% * 2 - 14px), calc(3.25714% * 2));
        filter: blur(0) brightness(0.85);
    }
    #back3:hover {
        transform: translate(calc(-5.7% * 3 - 14px), calc(3.25714% * 3));
        filter: blur(0) brightness(0.75);
    }
    #back1 {filter: blur(0) brightness(0.9);}
    #back2 {filter: blur(0) brightness(0.8);}
    #back3 {filter: blur(0) brightness(0.7);}

    #nextpage:hover {left: calc(70% + 300px - 20px);}
    #nextpage {
    left: calc(70% + 300px);
    float: right;
}
}

@media (max-width: 499px) {}
@media (min-width: 500px) {}

@font-face {
	font-family: "Fira Mono";
	src:url(assets/metacontent/fonts/FiraMono-Regular.woff2);
}
@font-face {
	font-family: Libertinus;
	src:url(assets/metacontent/fonts/LibertinusSerif-Regular.woff2);
}
@font-face {
	font-family:'Archivo Black';
	src: url(assets/metacontent/fonts/ArchivoBlack-Regular.woff2);
}
@font-face {
	font-family: 'Francois One';
	src: url(assets/metacontent/fonts/francois-one-v21-latin-regular.woff2);
}

a {text-decoration: none;}
.white.bg {background-color: var(--eternalsmileWhite);}
.white.text, .white.text a, body {color: var(--eternalsmileWhite);}
.grey.bg, .row hr {background-color: var(--eternalsmileGrey);}
.grey.text, .grey.text a  {color: var(--eternalsmileGrey);}
.light.grey.bg {background-color: var(--eternalsmileLightGrey);}
.light.grey.text, .light.grey.text a, .secondary.text, blockquote, .pic.typ {color: var(--eternalsmileLightGrey);}
.blackground.bg {background-color: var(--eternalsmileBlackground);}
.blackground.text, .blackground.text a {color: var(--eternalsmileBlackground);}
.black.bg {background-color: var(--eternalsmileBlack);}
.black.text, .black.text a {color: var(--eternalsmileBlack);}

.relative, .iconBox, #underpage {position: relative;}
.absolute, .bgpage, #sticker, .text-bg {position: absolute;}
#underpage, #mobileSub {z-index:1;}
.boldify, .iconBox {white-space:nowrap;} 

.fancyText, .pic.typ p {font-family:Libertinus;}

.divided >#pageSelect::after {font-size:30px;}
.divided >*::after {
	content:"/";
	padding-left: 5px;
	padding-right: 5px;
}
.divided >*:last-child::after {
	content:"";
	padding:unset;
}
.splitter, .row hr {border:none;}
.main.splitter {
	height: 5px;
	margin-bottom:20px;
}
.secondary.splitter, .row hr {height: 3px;}

.dynamicles, #mainnav a {
    transition: -webkit-filter 400ms, border-radius 1s, left 400ms, filter 400ms, opacity 400ms, transform 400ms, background-color 0.25s;
}

.untouchable, .text-bg {
    pointer-events: none;
    user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -moz-user-select: none;
}
.flexify, .horizontalList, .iconBox, .iconBox > span, .text-bg, h1 span, .row, .pic.typ {display:flex;}
.center, .horizontalList, .page, .banner {
	align-content: center;
	align-items:center;
	margin:auto;
}
.horizontalList {flex-direction: row; gap: 3%;}
.horizontalList >*, .page {width: 100%;}
.scroller.horizontalList {
	justify-content:space-between;
	overflow:auto;
}

.page::before {
    width: var(--comicWidth);
    height: var(--comicHeight);
}
.page {
	aspect-ratio: 4/7;
	max-width: var(--comicWidth);
	max-height: var(--comicHeight);
	font-size: 0;
}
.bgpage {
    left: 0;
    right: 0;
}
#back3 {transform: translate(calc(-5.7% * 3), calc(3.25714% * 3));}
#back2 {transform: translate(calc(-5.7% * 2), calc(3.25714% * 2));}
#back1 {transform: translate(-5.7%, 3.25714%);}



#sticker {
    max-width: 200%;
    max-height: 2000px;
    margin-top: -4px;
}

#underpage {
    max-width: 1000px; 
    transform: translateY(-25%);
}

.top.bookmark:hover  {
    transform: translateY(1%);
}
.load.bookmark {

}
.mobile.load.bookmark {
	mask: var(--load);
}
.clippy, .bookmark.clippy, .top.bookmark.clippy, .clippy.arrow {mask-size: 100%}
.top.bookmark.clippy{
    width: 95px;
    height:220px;
}
.flip {transform: scale(-1);}
.nav.icon {max-width: 170px;}
.nav.icon.arrow:hover {filter: brightness(0.8);}
.clippy.arrow {
	max-height:170px;
}
.clippy.bookmark {
	transform:translateY(-24px);
}
#navside {
    margin-left: 0;
    margin-right: auto; 
    transform: scale(90%);
    gap: 7%;
}
#bookmarkside >* {
    max-width: 120px;
}

.subButton {
	background-color:var(--subGreen);
	min-width:130px;
}
.subButton span >* {
	background-color: var(--eternalsmileBlackground);
	width: 25px;
	height: 25px;
}
#mobileSub{
	color:var(--eternalsmileBlackground);
	padding:7px;
}
#sub-bg {
	background:linear-gradient(154.8deg, rgba(102, 128, 76, 0.21) 0%, rgba(18, 30, 5, 0.24) 100%);
	background-clip:text;
	color:#1a1b194a;
}
.iconBox {
	overflow:hidden;
}
.iconBox > span {gap:8px;}
.iconBox, .iconBox > span, .text-bg, .center, .horizontalList, .page, .banner, h1 span  {
	align-self:center;
	justify-content:center;
}
.iconBox img:hover, .subButton a:hover {filter:brightness(1.25);}
.text-bg {
	transform:rotate(-10deg);
	font-size: 15px;
	line-height:13px;
}

.boldify > a:hover{
	background-color:var(--eternalsmileGrey);
}

h1, h2, h3, h4, h5, h6, .boldify {
	font-family: 'Archivo Black';
	text-transform: uppercase;
}
.boldify, .boldify a, .boldify div {padding:1%;}
.scroller::-webkit-scrollbar {height:5px;}
.scroller::-webkit-scrollbar-thumb {
	background-color:#2e2e2d;
	border-radius:6px;
}
.scroller::-webkit-scrollbar-thumb:hover {background-color:#474745;}
.banner {mask-size:100%;}
.main.banner {
	max-width:725px;
	flex-shrink: 0.38;
}
.cascade {flex-direction: row-reverse;}
.cascade >* {
	transform: skewY(15deg) translateY(-3px);
	filter: drop-shadow(0 0 2px black);
}
.main.cascade >* { transform: unset; filter: unset; opacity: 0.8;} 
.main.cascade {
	width:fit-content;
	padding: 5px;
	padding-left:10px;
	padding-right:10px;
	opacity: 0.5;
	font-size: 20px;
}
.main.cascade::after {
	padding-right:2px;
	font-weight: bold;
	letter-spacing: 1px;
	font-size: 15px;
	color: var(--eternalsmileLightGrey);
	content: "rate page -";
}

article {
	max-width: 1500px;
	margin: auto;
}
p {
	font-family: 'Francois One';
	font-size: 16px;
	letter-spacing: 0.5px;
}
blockquote {
	font-family: "Fira Mono";
	font-size: 15px;
}
blockquote::before {
	content:"";
	position:absolute;
	background-position: top left;
	background-repeat: no-repeat;
	background-size: 60px;
	aspect-ratio: 1;
	transform: translateX(-65px);
	opacity: 0.7;
	width: 60px;
}
blockquote.j::before {background-image:url(assets/metacontent/icons/jread3.svg);}
blockquote.j {padding-left:70px;}
article h1 {font-size: 30px;}
h1 span {
	align-items: flex-start;
	gap: 15px; 
	padding-left:20px; 
	padding-right:20px;
}
h1 span .banner {margin: unset;}
.plot.banner {
	max-width: 325px;
	width: 90%
}
.row h1, .row hr  {flex-basis:100%;}
.row {width:85%; flex-wrap:wrap; gap: 20px;}
.row >* {flex: 1 1 0px;}
.not.row, .pic.typ {flex-direction:column;}
.ex {filter:grayscale(00%) opacity(1.85);}
.j.ex {content: url('assets/metacontent/icons/jread3.svg');}
.pic.typ img {
	max-width: 600px;
	width: 100%;
	border-radius: 10px;
}
.pic.typ p {margin: 5px; font-size: 17px; letter-spacing:1px;}
.pic.typ {
	text-transform:uppercase;
	width:fit-content;
	flex-grow: 0;
	flex-basis: fit-content;
}
.pic.typ p:last-child {
	text-align: right;
}

